# MCP-Server-for-MAS-Developments

./: .gitignore  LICENSE  README.md
API-Server-with-TCP-Support/agents/ISMAgent/: requirements.txt  start_ism_agent.ps1
API-Server-with-TCP-Support/clients/Gradio/mcp_servers/pgpt/: config.json.example  pyproject.toml
API-Server-with-TCP-Support/examples/: example_users_to_add_no_tz.csv
API-Server-with-TCP-Support/security/: generate_encrypted_password.js
API-Server-with-TCP-Support/src/: index.js
MCP-Server-with-STDIO-Support/: Install-MPC-Stdio.ps1  Install-MPC-Stdio.sh  LICENSE  README.md  pgpt.env.json.example
MCP-Server-with-STDIO-Support/security/: generate_decrypted_password.js
MCP-Server-with-STDIO-Support/src/: index.js
MCP-Server-with-Streamable-HTTP-Support/: Install-MPC-SSE.ps1  Install-MPC-SSE.sh  InstallChatBot.ps1  InstallChatBot.sh  README.md  pgpt.env.json.example  start_chatbot_agent.ps1  start_chatbot_agent.sh
MCP-Server-with-Streamable-HTTP-Support/security/: generate_encrypted_password.js
MCP-Server-with-Streamable-HTTP-Support/src/: index.js
agents/ISMAgent/: README.md  config_example.json
agents/MCP-Client/: server_config.json
agents/OpenAI_Compatible_API_Agent/: docker-compose.yml
clients/Gradio/: Api.py  config.py  main.py  mcp_client.py  requirements.txt  server_config.json
examples/: example_users_to_add_no_tz.csv
examples/create_users_from_csv/: config.py  create_users_from_csv.py
examples/sftp_upload_with_id/: demo_upload.py  requirements.txt
security/: generate_decrypted_password.js
(+72 files in other folders)
