[project]
name = "mcp-server-nostr"
version = "1.0.0"
description = "Model Context Protocol server to access PrivateGPT"
authors = [
    { name = "Tobias Baur", email = "tobias.baur@fujitsu.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.5.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
mcp-server-nostr = "server:main"
dev = "server:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
